--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+  <div class="navbar">
+    <%= link_to "domov", root_path %>
+    <%= link_to "prijava", new_user_session_path %>
+    <%= link_to "registracija", new_user_registration_path %>
+    <%= link_to "odjava", destroy_user_session_path, method: :delete %>
+  </div>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
