--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
   <div class="navbar">
+    <%= link_to "Domov", root_path %>
     <%= display_navbar_options %>
   </div>
   <p class="notice"><%= notice %></p>
