--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,6 @@
 </p>
 <p>
   <strong>Avtor:</strong>
-  <%= @post.user.email %>
+  <%= @post.user.name %>
 </p>
 <%= display_post_show_links(@post) %>
