--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,26 @@
   </head>
 
   <body>
+  <div class="container">
+    <header class="blog-header py-3">
+      <div class="row flex-nowrap justify-content-between align-items-center">
+        <div class="col-4 pt-1">
+          <%= link_to image_pack_tag('logo.png', style: 'max-height: 50px'), root_path, class: 'blog-header-logo text-dark' %>
+        </div>
+        <div class="col-2  justify-content-end "><%= link_to 'Nov Oglas', new_post_path %></div>
+        <div class=" justify-content-end align-items-center">
+          <%= display_navbar_options %>
+      </div>
+
+      </div>
+    </header>
   <div class="navbar">
-    <%= link_to "Domov", root_path %>
-    <%= display_navbar_options %>
+
+
   </div>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <%= yield %>
+  </div>
   </body>
 </html>
