--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,4 +13,4 @@
   <strong>Avtor:</strong>
   <%= @post.user.name %>
 </p>
-<%= display_post_show_links(@post) %>
+<%= display_show_post_links(@post) %>
