fb popravlen pa admin dela file upload

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,9 @@
     <%= form.label :body %>
     <%= form.text_field :body, required: true %>
   </div>
+  <div class="field">
+    <%= form.file_field :photo %>
+    </div>
 
   <div class="actions">
     <%= form.submit %>
