--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Post</h1>
+13 lines (11 sloc) 467 Bytes
+<div class="card my-5">
+  <div class="card-body">
+    <h1>Edit Post</h1>
 
-<%= render 'form', post: @post %>
+    <%= render 'form', post: @post %>
 
-<%= link_to 'Več', @post %> |
-<%= link_to 'Back', posts_path %>
+    <div class="mt-2">
+      <%= link_to 'Show', @post, class: 'btn btn-info mr-2' %>
+      <%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger mr-2' %> # moved the destroy button from index to here (optional)
+      <%= link_to 'Back', posts_path, class: 'btn btn-light' %>
+    </div>
+  </div>
+</div>
