--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,13 +3,17 @@
     <% @posts.each do |post| %>
     <div class="card flex-md-row mb-4 box-shadow h-md-250">
       <div class="card-body d-flex flex-column align-items-start">
-        <strong class="d-inline-block mb-2 "><%= post.user.name || 'Anonimen avtor' %></strong>
-        <h3 class="mb-0"><%= post.title %></h3>
-        <div class="mb-1 text-muted"><%= time_ago_in_words(post.created_at) %></div>
-        <p class="card-text mb-auto"><%= post.body.truncate(60, separator: /\s/) %></p>
+        <strong class="mb-0"><%= post.title %> </strong>
+       <h3 class="d-inline-block mb-2 "> <%= post.model %></h3>
+        <h5><%= post.letnik %></h5>
+        <h6><%= post.km %> km</h6>
+        <div class="mb-1 text-muted"><%= post.cena %>€</div>
+        <p class="card-text mb-auto"><%= time_ago_in_words(post.created_at) %></p>
+
+
         <%= display_index_post_links(post) %>
       </div>
-      <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb" alt="Thumbnail [200x250]" style="width: 200px; height: 250px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_17f5f9d85a7%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_17f5f9d85a7%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2256.20833206176758%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+      <%= image_tag post.photo, class:"card-img-right flex-auto d-none d-md-block", width: 350, height: 250 if post.photo.attached? %>
     </div>
     </div>
     <% end %>
